<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.imageascii.ImageAsciiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black_transparent2"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/image_ascii_act_title"
        app:titleTextColor="@color/white"
        app:menu="@menu/image_ascii_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/content_sv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintBottom_toTopOf="@id/info_tv">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:id="@+id/ascii_art_hsv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/ascii_art_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:src="@drawable/icon_image"/>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/ascii_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/white"
                android:textSize="6sp"
                android:typeface="monospace"
                android:lineSpacingMultiplier="0.9"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="@@@###***+++---:::"/>

        </FrameLayout>

    </ScrollView>

    <TextView
        android:id="@+id/empty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/image_ascii_act_empty"
        android:textColor="@color/gray_400"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/content_sv"
        app:layout_constraintBottom_toBottomOf="@id/content_sv"/>

    <ProgressBar
        android:id="@+id/loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/content_sv"
        app:layout_constraintBottom_toBottomOf="@id/content_sv"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black_transparent2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textColor="@color/cyan_400"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="1080 x 1920 px | Grid 128 x 227 | 29056 chars"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settings_sv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black_transparent2"
        android:visibility="gone"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_ascii_setting_title"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_ascii_setting_char_reverse"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/char_reverse_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_ascii_setting_color_reverse"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/color_reverse_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_ascii_setting_keep_image_color"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/keep_image_color_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_ascii_setting_monospace"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/monospace_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_ascii_setting_text_mode"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/text_mode_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/char_width_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                tools:text="Char Width: 128"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/char_width_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="47"/>

            <TextView
                android:id="@+id/color_fill_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                tools:text="Image Color Fill Rate: 0"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/color_fill_rate_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"/>

            <TextView
                android:id="@+id/text_rows_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                tools:text="Text Rows Ratio: 50"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/text_rows_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_settings_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/image_ascii_setting_close"
                android:textColor="@color/cyan_400"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
